[package]
name = "phoenix-channels"
version = "0.1.4"
authors = ["Goran Sterjov <git@goran.email>"]
description = "A websocket client library for Phoenix channels"
repository = "https://github.com/gsterjov/phoenix-channels-rs"
readme = "README.md"
keywords = ["websocket", "phoenix", "channels", "pubsub", "messaging"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[dependencies]
slog = "2.2.1"
slog-stdlog = "3.0.2"
websocket = "0.23"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures-preview = "0.3.0-alpha.13"
