[package]
name = "phoenix-channels"
version = "0.1.7"
authors = ["Goran Sterjov <git@goran.email>"]
description = "A websocket client library for Phoenix channels"
repository = "https://github.com/gsterjov/phoenix-channels-rs"
readme = "README.md"
keywords = ["websocket", "phoenix", "channels", "pubsub", "messaging"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[dependencies]
slog = "2.5.2"
slog-stdlog = "4.0.0"
websocket = "0.26"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
